# old_ci

./: CMakeLists.txt  README.md
asio/: CMakeLists.txt
asio/cmake/: configure.cmake
asio/src/: ambiguous.patch  configure.ac
hiredis/: CMakeLists.txt
jsoncpp/: Android.mk  CMakeLists.txt
libcurl/: CMakeLists.txt
libcurl/cmake/: configure.cmake
libetpan/: CMakeLists.txt
libetpan/cmake/: configure.cmake
libev/: CMakeLists.txt
libev/cmake/: configure.cmake
libevent/: CMakeLists.txt
libevent/cmake/: configure.cmake
libiconv/: CMakeLists.txt
libiconv/cmake/: configure.cmake
libldapc++/: CMakeLists.txt
libldapc++/cmake/: configure.cmake
libldapc++/src/: LDAPConnection.cpp  LDAPConnection.h  build.patch
liblua/: Android.mk  CMakeLists.txt  liolib.c  llex.c  loslib.c  luaconf.h
libmsgpack/: CMakeLists.txt
libopenldap/: CMakeLists.txt
libopenldap/cmake/: configure.cmake
libopenldap/src/: 0002-fix-bignum.patch  0003-disable-docs.patch  build.patch
libopenssl_1_0_x/: CMakeLists.txt
libopenssl_1_0_x/src/: Configure.patch
libopenssl_1_1_x/: CMakeLists.txt
libopenssl_1_1_x/src/: local_wrapper_android.sh.in  ndk-clang-targets.patch  no_doc.patch
libsasl/: CMakeLists.txt
libsasl/cmake/: configure.cmake
libsasl/src/: build.patch
libsqlite/: CMakeLists.txt
libtinyxml2/: CMakeLists.txt
libuuid/: CMakeLists.txt
libuuid/cmake/: configure.cmake
libzip/: CMakeLists.txt
libzip/cmake/: configure.cmake
linenoise/: CMakeLists.txt
spdlog/: CMakeLists.txt
spdlog/include/spdlog/details/: file_helper.h  logger_impl.h  os.h  registry.h
spdlog/include/spdlog/sinks/: file_sinks.h
termux-elf-cleaner/: build.sh
utf8/utf8/: CMakeLists.txt
zeromq/: CMakeLists.txt
zeromq/cmake/: configure.cmake
